<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background= "@drawable/background_home" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <ImageView
            android:contentDescription="@string/logo_text"
            android:layout_margin="50dp"
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="0px"
            android:layout_weight="10"
            android:src="@drawable/logo1" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:stretchColumns="*"
            android:layout_weight="3"
            android:padding="5dp">
            <TableRow
                android:layout_height="0dp"
                android:layout_weight="1"
                style="?android:attr/buttonBarStyle">
                <Button
                    android:layout_height="match_parent"
                    android:id="@+id/home_logBtn"
                    android:text="@string/home_log" />
                <Button
                    android:layout_height="match_parent"
                    android:id="@+id/home_recordBtn"
                    android:text="@string/home_record" />
            </TableRow>
            <TableRow
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                style="?android:attr/buttonBarStyle">
                <Button
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:id="@+id/home_dataBtn"
                    android:text="@string/dataBtn"
                    />

            </TableRow>

        </TableLayout>

    </LinearLayout>



</android.support.constraint.ConstraintLayout>