<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fernanjo.poopbuddy.LogActivity">
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="20dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layout_date"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="20" />

            <Button
                android:id="@+id/btn_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dateBtn" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/layout_time" >

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="20" />

            <Button
                android:id="@+id/btn_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/timeBtn"
                android:layout_weight="1"/>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_selectors"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/log_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:padding="5dp"
            android:text="@string/log_title"/>

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_below="@+id/log_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="144dp"
                android:layout_height="45dp"
                android:text="@string/col_2"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView_date"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout1"
            android:padding="5dp"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp">

            <TextView
                android:id="@+id/textView_timeText"
                android:layout_width="144dp"
                android:layout_height="45dp"
                android:text="@string/col_3"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView_time"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout2"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView_location"
                android:layout_width="144dp"
                android:layout_height="45dp"
                android:text="@string/col_4"
                android:textSize="30sp" />

            <Spinner
                android:id="@+id/location_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                style="?android:attr/spinnerItemStyle"/>

            <EditText
                android:id="@+id/editText_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout3"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="144dp"
                android:layout_height="45dp"
                android:text="@string/col_5"
                android:textSize="30sp" />

            <Spinner
                android:id="@+id/quality_spinner"
                android:entries="@array/quality_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="?android:attr/spinnerItemStyle"
                android:visibility="visible"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout4"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="144dp"
                android:layout_height="45dp"
                android:text="@string/col_6"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/editText_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text|textCapSentences|textAutoCorrect"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout5"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:text="@string/col_7"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/cb_pain"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout6"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:text="@string/col_8"
                android:textSize="30sp" />

            <CheckBox
                android:id="@+id/cb_blood"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </LinearLayout>


        <Button
            android:id="@+id/insertData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout7"
            android:layout_centerHorizontal="true"
            android:text="@string/insBtn"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/btn_add10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/insertData"
            android:layout_centerHorizontal="true"
            android:text="TEST: Add 10 rows"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
